--- a/src/app/app-finance/app-finance.component.html
+++ b/src/app/app-finance/app-finance.component.html
@@ -594,7 +594,7 @@
                                 </a>
                                 <ul>
                                     <li>
-                                        <a href="index.html.htm">
+                                        <a routerLink="/app-dashboard">
                                             <i class="metismenu-icon"></i>
                                             Ver
                                         </a>
