--- a/src/app/app-finance/app-finance.component.html
+++ b/src/app/app-finance/app-finance.component.html
@@ -151,7 +151,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="widget-content-right mr-2">
-                                                                    <button
+                                                                    <button routerLink=""
                                                                         class="btn-pill btn-shadow btn-shine btn btn-focus">Sair</button>
                                                                 </div>
                                                             </div>
